[황다영] 댓글 수정/삭제버튼

--- a/src/views/client/posts/postDetail.ejs
+++ b/src/views/client/posts/postDetail.ejs
@@ -139,8 +139,8 @@
               <!-- 답글, 수정, 삭제, 공유 버튼 -->
               <div class="commentEditBtns">
                 <button type="button" onclick="toggleReplyArea(this)"><i class="fa-solid fa-reply"></i> 답글달기</button>
-                <button type="button"><i class="fa-solid fa-pen"></i> 수정</button>
-                <button type="button"><i class="fa-regular fa-trash-can"></i> 삭제</button>
+                <!-- <button type="button"><i class="fa-solid fa-pen"></i> 수정</button>
+                <button type="button"><i class="fa-regular fa-trash-can"></i> 삭제</button> -->
               </div>
             </div>
             <!-- 댓글 리스트 끝 -->
