--- a/src/views/client/posts/postList.ejs
+++ b/src/views/client/posts/postList.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>게시글 리스트</title>
+    <title>나눔숲</title>
     <link rel="stylesheet" href="/static/styles/pages/posts/postList.css" />
     <link
       rel="stylesheet"
@@ -128,11 +128,11 @@
                 <i class="fa-regular fa-heart"></i>
                 12
               </div>
-              <!-- 답글, 수정, 삭제, 공유 버튼 -->
+              <!-- 답글, 수정, 삭제 버튼 -->
               <div class="commentEditBtns">
                 <button type="button" onclick="toggleReplyArea(this)"><i class="fa-solid fa-reply"></i> 답글달기</button>
-                <button type="button"><i class="fa-solid fa-pen"></i> 수정</button>
-                <button type="button"><i class="fa-regular fa-trash-can"></i> 삭제</button>
+                <!-- <button type="button"><i class="fa-solid fa-pen"></i> 수정</button>
+                <button type="button"><i class="fa-regular fa-trash-can"></i> 삭제</button> -->
               </div>
             </div>
             <!-- 댓글 리스트 끝 -->
