[황다영]게시글 즐찾/공유 수정

--- a/src/views/client/posts/postList.ejs
+++ b/src/views/client/posts/postList.ejs
@@ -75,14 +75,13 @@
               <i class="fa-solid fa-comment"></i>
               1
             </div>
-            <div>
-              <!-- 즐찾 안했을 때 투명별 -->
-              <!-- <i class="fa-regular fa-star"></i> -->
+            <!-- <div>
+            
               <i class="fa-solid fa-star"></i>
             </div>
             <div>
               <i class="fa-solid fa-share-from-square"></i>
-            </div>
+            </div> -->
           </div>
           <!-- 좋아요/댓글/즐겨찾기/공유버튼 끝  -->
 
