--- a/src/views/client/users/userDetail.ejs
+++ b/src/views/client/users/userDetail.ejs
@@ -38,6 +38,7 @@
             <p>ㅣ</p>
             <button id="likepost-button">좋아요</button>
           </div>
+          <% posts.forEach((post) => { %>
           <div class="post">
             <!-- 프로필 이미지,닉네임,아이디 -->
             <div class="post-profile">
@@ -57,27 +58,32 @@
               </div>
               <!-- 카테고리 표기 -->
               <div class="category">
-                <i class="fa-solid fa-icons"></i>
-                <span>음식</span>
+                <!-- <i class="fa-solid fa-icons"></i> -->
+                <span><%= post.category.title.split(' 나눔숲')[0] %></span>
               </div>
             </div>
             <div class="post-content">
-              <!-- 게시글 내용 -->
-              <p class="post-content-text">진짜 맨날 배고파요 어이없음 ㅎ</p>
+              <% post.pictures?.forEach((image) => { %>
               <div class="post-image">
-                <img src="/static/images/post_food.webp" alt="post image" />
+                <img src="<%= image %>" alt="post image" />
               </div>
+              <% }) %>
+              <!-- 게시글 내용 -->
+              <p class="post-content-title"><%= post.title %></p>
+              <p class="post-content-text"><%= post.content %></p>
               <!-- 게시글 작성 시간 -->
-              <p class="post-time-text">2024년 9월 12일 오후 4시 31분</p>
+              <p class="post-time-text"><%= post.createdAt.toISOString() %></p>
             </div>
             <!-- 게시글 반응 아이콘 -->
             <div class="icon-container">
               <button id="likeButton" class="icon-button" aria-label="like Button">
-                <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-heart"><%= post.likes.length %></i>
               </button>
-              <button id="commentButton" class="icon-button" aria-label="comment Icon">
-                <i class="fa-regular fa-message"></i>
-              </button>
+              <% if (post.comments.length > 0) { %>
+              <i class="fa-solid fa-comment"></i>
+              <%- post.comments.length %> <% } else { %>
+              <i class="fa-regular fa-comment"></i>
+              0 <% } %>
               <button id="favoriteButton" class="icon-button" aria-label="favorite Icon">
                 <i class="fa-regular fa-star"></i>
               </button>
@@ -89,10 +95,29 @@
               </button>
             </div>
           </div>
+          <% }) %>
         </div>
       </main>
     </div>
     <script>
+      // 작성시간 한글 변환
+      const $createdAt = document.querySelectorAll(".createdAt");
+
+      const options = {
+        year: "numeric",
+        month: "long",
+        day: "numeric",
+        hour: "2-digit",
+        minute: "2-digit",
+        timeZone: "Asia/Seoul",
+      };
+
+      $createdAt.forEach((e) => {
+        const createdAt = new Date(e.dataset.createdAt);
+        const formattedDate = createdAt.toLocaleString("ko-KR", options);
+        e.textContent = formattedDate;
+      });
+
       const listIconButton = document.getElementById("listButton");
       const optionMenu = document.getElementById("optionMenu");
 
