--- a/src/views/client/users/userDetail.ejs
+++ b/src/views/client/users/userDetail.ejs
@@ -69,7 +69,7 @@
               </div>
               <% }) %>
               <!-- 게시글 내용 -->
-              <p class="post-content-title"><%= post.title %></p>
+              <p class="post-content-title"><a href="/posts/<%= post.postId %>"><%= post.title %></a></p>
               <p class="post-content-text"><%= post.content %></p>
               <!-- 게시글 작성 시간 -->
               <p class="post-time-text"><%= post.createdAt.toISOString() %></p>
