[황다영] 팔로우 버튼 주석처리

--- a/public/styles/pages/posts/postDetail.css
+++ b/public/styles/pages/posts/postDetail.css
@@ -31,8 +31,9 @@ a {
 }
 /* 프로필 이미지*/
 .profileImg {
-  width: 100%;
-  max-width: 45px;
+  /* width: 100%; */
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
 }
 
