--- a/src/views/client/posts/postDetail.ejs
+++ b/src/views/client/posts/postDetail.ejs
@@ -28,7 +28,7 @@
                 <!-- <%= post.author.profile.nickname %> -->
                 <a href="/users/<%= post.author.id %>" class="nickName"><%= post.author.profile.nickname %></a>
                 <!-- 팔로우 버튼 -->
-                <button type="button"><i class="fa-solid fa-plus"></i> 팔로우</button>
+                <!-- <button type="button"><i class="fa-solid fa-plus"></i> 팔로우</button> -->
                 <!-- 유저 아이디 -->
                 <a href="/users/<%= post.author.id %>" class="userId">&#64;<%= post.author.accountId %></a>
               </div>
@@ -88,7 +88,7 @@
               <i class="fa-regular fa-comment"></i>
               0 <% } %>
             </div>
-            <!-- <div>
+            <!-- <div>v
              
               <i class="fa-solid fa-star"></i>
             </div> -->
