--- a/src/views/client/posts/postList.ejs
+++ b/src/views/client/posts/postList.ejs
@@ -32,7 +32,7 @@
 
                 <a href="http://localhost:4000/users/<%= post.author.id %>" class="nickName"><%= post.author.profile.nickname %></a>
                 <!-- 팔로우 버튼 -->
-                <button type="button"><i class="fa-solid fa-plus"></i> 팔로우</button>
+                <!-- <button type="button"><i class="fa-solid fa-plus"></i> 팔로우</button> -->
                 <!-- 유저 아이디 -->
                 <a href="" class="userId">&#64;<%= post.author.accountId %></a>
               </div>
